--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pytelegrambotapi = "^4.16.1"
 aiohttp = "^3.9.3"
 python-dotenv = "^1.0.1"
 transformers = "^4.38.1"
+icecream = "^2.1.3"
 
 
 [build-system]
